// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadMask should render with children 1`] = `
<WithStyles(LoadMask)>
  <LoadMask classes={{...}} show={false} fullscreen={false} align="center">
    <div style={[undefined]} className="RSFLoadMask-root-1">
      Loading...
    </div>
  </LoadMask>
</WithStyles(LoadMask)>
`;

exports[`LoadMask should render without children 1`] = `
<WithStyles(LoadMask)>
  <LoadMask classes={{...}} show={false} fullscreen={false} align="center">
    <div style={[undefined]} className="RSFLoadMask-root-1">
      <WithStyles(CircularProgress) className={[undefined]} color="secondary">
        <CircularProgress className={[undefined]} color="secondary" classes={{...}} disableShrink={false} size={40} thickness={3.6} value={0} variant="indeterminate">
          <div className="MuiCircularProgress-root-6 MuiCircularProgress-colorSecondary-10 MuiCircularProgress-indeterminate-8" style={{...}} role="progressbar">
            <svg className="MuiCircularProgress-svg-11" viewBox="22 22 44 44">
              <circle className="MuiCircularProgress-circle-12 MuiCircularProgress-circleIndeterminate-14" style={{...}} cx={44} cy={44} r={20.2} fill="none" strokeWidth={3.6} />
            </svg>
          </div>
        </CircularProgress>
      </WithStyles(CircularProgress)>
    </div>
  </LoadMask>
</WithStyles(LoadMask)>
`;
